Updated grid to use padding for the gutter to ensure the grid works when wrapping columns onto new rows/lines.

--- a/src/base/css/settings/_honeycomb.base.settings.container.scss
+++ b/src/base/css/settings/_honeycomb.base.settings.container.scss
@@ -3,4 +3,4 @@
 \*------------------------------------*/
 
 // Set the default container width.
-$container-width: 1200px !default;
+$container-width: 1320px !default;
