--- a/src/grid/css/objects/_honeycomb.grid.objects.grid.scss
+++ b/src/grid/css/objects/_honeycomb.grid.objects.grid.scss
@@ -30,30 +30,26 @@
     .#{$grid-class}__col {
         display: block;
         float: left;
-        margin: 0;
-        margin-left: $grid-gutter * 1%;
+        padding-left: $grid-gutter * 1%;
+        padding-right: $grid-gutter * 1%;
 
-        &:first-of-type {
-            margin-left: 0;
+        &.#{$grid-class}__col--no-gutter {
+            padding-left: 0;
+            padding-right: 0;
         }
-    }
 
-    @if $grid-gutter != 0 {
-        %#{$grid-class}__row--no-gutter,
-        .#{$grid-class}__row--no-gutter {
-            %#{$grid-class}__col,
-            .#{$grid-class}__col {
-                margin-left: 0;
-            }
+        &.#{$grid-class}__col--no-left-gutter {
+            padding-left: 0;
+        }
+
+        &.#{$grid-class}__col--no-right-gutter {
+            padding-right: 0;
         }
     }
 
     @include responsive('small') {
         %#{$grid-class} %#{$grid-class}__col,
         .#{$grid-class} .#{$grid-class}__col {
-            @include padding(0, left);
-            @include padding(0, right);
-            margin-left: 0;
             width: 100%;
             border: none;
         }
@@ -67,6 +63,7 @@
     /**
     * Build the grid at breakpoints.
     */
+    /** @TODO Needs work. Need to think about this not on a Friday afternoon! */
     $breakpoints: false !default;
     @if $breakpoints {
         @each $breakpoint in $breakpoints {
